; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/serial/extr_ubser.c_ubser_inc_tx_unit.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/serial/extr_ubser.c_ubser_inc_tx_unit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ubser_softc = type { i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ubser_softc*)* @ubser_inc_tx_unit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ubser_inc_tx_unit(%struct.ubser_softc* %0) #0 {
  %2 = alloca %struct.ubser_softc*, align 8
  store %struct.ubser_softc* %0, %struct.ubser_softc** %2, align 8
  %3 = load %struct.ubser_softc*, %struct.ubser_softc** %2, align 8
  %4 = getelementptr inbounds %struct.ubser_softc, %struct.ubser_softc* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = add nsw i64 %5, 1
  store i64 %6, i64* %4, align 8
  %7 = load %struct.ubser_softc*, %struct.ubser_softc** %2, align 8
  %8 = getelementptr inbounds %struct.ubser_softc, %struct.ubser_softc* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = load %struct.ubser_softc*, %struct.ubser_softc** %2, align 8
  %11 = getelementptr inbounds %struct.ubser_softc, %struct.ubser_softc* %10, i32 0, i32 1
  %12 = load i64, i64* %11, align 8
  %13 = icmp sge i64 %9, %12
  br i1 %13, label %14, label %17

14:                                               ; preds = %1
  %15 = load %struct.ubser_softc*, %struct.ubser_softc** %2, align 8
  %16 = getelementptr inbounds %struct.ubser_softc, %struct.ubser_softc* %15, i32 0, i32 0
  store i64 0, i64* %16, align 8
  br label %17

17:                                               ; preds = %14, %1
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
